<resources>
    <string name="app_name">EcoDo</string>
    <string name="app_name_regular">ecodo</string>
    <string name="title_home">Beranda</string>
    <string name="title_trash">Sampah</string>
    <string name="title_settings">Pengaturan</string>
    <string name="pindai_sampah">Pindai Sampah</string>
    <string name="tutorial_daur_ulang">Tutorial Daur Ulang</string>
    <string name="cari_bank_sampah">Cari Bank Sampah</string>
    <string name="histori_sampah">Histori Sampah</string>

    <string name="headline">Tutorial</string>
    <string name="filter_1_s">Barang guna</string>
    <string name="tv_filter_s">Atau cari berdasarkan filter</string>
    <string name="filter_2_s">Bisnis</string>
    <string name="tv_title_video">Ini adalah judul video</string>
    <string name="hint_search">Cari tutorial yang anda inginkan</string>

    <string name="headline_video_recomend">Tutorial Rekomendasi</string>
    <string name="headline_information">Rekomendasi Daur Ulang</string>
    <string name="tv_information_s">Berikut hal yang dapat anda lakukan dalam melakukan (Reuse)</string>
    <string name="information_1">\n Hindari penggunaan alat makan sekali pakai. Sebaliknya, pakailah peralatan makan dan botol yang dapat digunakan berulang kali.</string>
    <string name="information_2">\n\nPilih barang dengan bungkus kemasan yang sedikit atau tidak berlebihan.</string>
    <string name="information_3">\n\nGunakan kedua sisi lembar kertas.</string>
    <string name="information_4">\n\nMembawa kantong belanja sendiri.</string>
    <string name="information_5">\n\nBelilah barang yang dapat diisi ulang.</string>
    <string name="information_6">\n\nKurangi penggunaan kertas tisu dengan menggunakan lap kain atau sapu tangan.</string>
    <string name="tv_feedback_s">Berikan pendapat anda terhadap informasi yang diberikan</string>
    <string name="title_recomendation">Rekomendasi Daur Ulang</string>
    <string name="title_jenis">Jenis Sampah</string>
    <string name="jenis">Plastik</string>
    <string name="head">Yuk cari tau apa yang bisa kamu \nlakukan dengan jenis sampah (plastik)</string>
    <string name="btn_cek_video">Cek Video</string>
    <string name="btn_cek_desc">Yuk Belajar menjadi keren</string>
    <string name="reduce_desc">deskripsi</string>
    <string name="head_reduce">Title</string>
    <string name="buttonHome1">Lihat contoh hasil pemindaian</string>
    <string name="btn_feedback">Berikan umpan balik dan saran untuk  Aplikasi ini menjadi lebih baik</string>
    <string name="bantuan">Pusat Bantuan</string>
    <string name="pilihanbahasa">Pengaturan Bahasa</string>
    <string name="tentang">Tentang Kami</string>
    <string name="headline_trash">Sampah yang tersimpan</string>
    <string name="hint_search_trash">Cari history sampah anda</string>
    <string name="action_delete">Hapus Sampah</string>

    <string name="recommendation_head">Yuk cari tau apa yang bisa kamu \nlakukan dengan jenis sampah (%1$s)</string>

    <integer-array name="data_img">
        <item>@drawable/reduces</item>
        <item>@drawable/reuse</item>
        <item>@drawable/recycles</item>
    </integer-array>

    <string-array name="data_head">
        <item>Reduce</item>
        <item>Reuse</item>
        <item>Recycle</item>
    </string-array>

    <string-array name="data_desc">
        <item>Mengurangi produksi limbah dengan mengurangi penggunaan barang-barang sekali pakai atau mengambil langkah-langkah untuk mengurangi konsumsi sumber daya alam</item>
        <item>Ini mencakup penggunaan kembali secara konvensional di mana barang dipakai lagi dengan fungsi yang sama, dan penggunaan kembali di mana barang dipergunakan dengan fungsi yang berbeda</item>
        <item>proses untuk menjadikan suatu bahan bekas menjadi bahan baru dengan tujuan mencegah adanya sampah yang sebenarnya dapat menjadi sesuatu yang berguna, mengurangi penggunaan bahan baku</item>
    </string-array>
</resources>