<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    tools:context=".ui.recomendation.information.InformationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_ecodo"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:layout_marginBottom="30dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/tv_information"
            card_view:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ecodoicon"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"/>

        <TextView
            android:id="@+id/tv_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="92dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/tv_information_s"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_ecodo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
            android:alpha="0"
            tools:alpha="100"/>

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="0dp"
            android:layout_height="370dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:background="@drawable/tvoutline_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_information"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2"
            app:layout_constraintHorizontal_bias="0.0"
            android:alpha="0"
            tools:alpha="100">

            <TextView
                android:id="@+id/information1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="top|start"
                android:text="@string/information_1"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColor="@color/black"
                android:alpha="0"
                tools:alpha="100"/>
            <TextView
                android:id="@+id/information2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:textSize="15sp"
                android:text="@string/information_2"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColor="@color/black"
                android:alpha="0"
                tools:alpha="100"/>
            <TextView
                android:id="@+id/information3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:textSize="15sp"
                android:text="@string/information_3"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColor="@color/black"
                android:alpha="0"
                tools:alpha="100"/>
            <TextView
                android:id="@+id/information4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:textSize="16sp"
                android:text="@string/information_4"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColor="@color/black"
                android:alpha="0"
                tools:alpha="100"/>
            <TextView
                android:id="@+id/information5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:textSize="15sp"
                android:text="@string/information_5"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColor="@color/black"
                android:alpha="0"
                tools:alpha="100"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/bg_feedback_infromation"
            app:layout_constraintStart_toStartOf="@id/linear_layout1"
            app:layout_constraintTop_toBottomOf="@id/linear_layout1"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal3"
            app:layout_constraintHorizontal_bias="0.0"
            android:alpha="0"
            tools:alpha="100">

            <TextView
                android:id="@+id/tv_feedback"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lineSpacingExtra="4sp"
                android:layout_marginTop="4dp"
                android:text="@string/tv_feedback_s"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_gravity="top"
                app:layout_constraintHorizontal_bias="0.0"
                android:alpha="0"
                tools:alpha="100"/>

            <com.bangkit.ecodo.ui.customview.DislikeButton
                android:id="@+id/imageButtonDislike"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/img_btn_dislike"
                app:layout_constraintHorizontal_bias="0.0"
                android:onClick="buttonClicked"
                android:alpha="0"
                tools:alpha="100"/>

            <com.bangkit.ecodo.ui.customview.LikeButton
                android:id="@+id/imageButtonLike"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/img_btn"
                app:layout_constraintHorizontal_bias="0.0"
                android:onClick="buttonClicked"
                android:alpha="0"
                tools:alpha="100"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.06"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal2"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.28"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal3"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="1"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>