<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recomendation.RecomendationActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:title="@string/title_recomendation" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            app:layout_constraintBottom_toTopOf="@id/linear_layout2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="start"
                    android:paddingStart="5dp">

                    <ImageView
                        android:id="@+id/item_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/icon_background"
                        android:scaleType="centerCrop"
                        card_view:layout_constraintEnd_toStartOf="@+id/text_setting" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_title_jenis"
                            android:layout_width="116dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="8dp"
                            android:lineSpacingExtra="8sp"
                            android:textAppearance="?android:attr/textAppearanceListItemSmall"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:text="@string/title_jenis" />

                        <TextView
                            android:id="@+id/tv_jenis"
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:textAppearance="?android:attr/textAppearanceListItemSmall"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            tools:text="@string/jenis" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/example_img"
                        android:layout_width="96dp"
                        android:layout_height="100dp"
                        android:background="@drawable/example_photo"
                        android:scaleType="centerCrop" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@id/linear_layout2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout1">

            <TextView
                android:id="@+id/tv_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                tools:text="@string/head" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="0dp"
            android:layout_height="380dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:overScrollMode="never"
            android:scrollbarSize="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/linear_layout2"
            app:layout_constraintTop_toBottomOf="@id/linear_layout2">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
